force-app/main/default/objects/Lead_Route_Tune_Snapshot__c/Lead_Route_Tune_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Loop2 Tune snapshot - captures routing model update proposal</description>
    <label>Lead Route Tune Snapshot</label>
    <nameField>
        <label>Lead Route Tune Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Route Tune Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>