force-app/main/default/objects/Lead_Route_Tune_Snapshot__c/fields/Confirm_Rate__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Rate__c</fullName>
    <label>Confirm Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>