force-app/main/default/objects/Lead_Route_Tune_Snapshot__c/fields/Model_Update__c.field-meta.xml
<CustomField>
    <fullName>Model_Update__c</fullName>
    <label>Model Update</label>
    <type>Text</type>
    <length>255</length>
</CustomField>