force-app/main/default/objects/Lead_Route_Tune_Snapshot__c/fields/Proposals__c.field-meta.xml
<CustomField>
    <fullName>Proposals__c</fullName>
    <label>Proposals</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>