force-app/main/default/objects/Lead_Route_Tune_Snapshot__c/fields/Total_Observed__c.field-meta.xml
<CustomField>
    <fullName>Total_Observed__c</fullName>
    <label>Total Observed</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>