force-app/main/default/objects/Lead_Route_Tune_Snapshot__c/fields/Tune_Id__c.field-meta.xml
<CustomField>
    <fullName>Tune_Id__c</fullName>
    <label>Tune ID</label>
    <type>Text</type>
    <length>100</length>
</CustomField>